--- a/style.css
+++ b/style.css
@@ -41,11 +41,20 @@ nav{
 .header-flex{
     display: flex;
     align-items: center;
+    
     overflow-x: hidden;
 }
 .nav-list{
     display: flex;
-    margin-left: 5rem;
+    vertical-align:middle;
+    
+}
+.nav-bar{
+    display: flex;
+}
+.nav-bar ul li{
+    display: flex;
+    margin-left: 2rem;
 }
 li{
     list-style: none;
@@ -91,8 +100,12 @@ a{
     background-color: var(--DarkViolet);
 }
 .mobile-menu{
-
+    cursor: pointer;
     display: none;
+    color: var(--Cyan);
+}
+.mobile-menu:hover{
+    color: var(--VeryDarkViolet)
 }
     /* header-content */
     .hero-section{
@@ -145,10 +158,13 @@ a{
     .form-input{
         display: block;
         width: 95%;
-        padding: 1rem 2rem;
+        padding: 10px 2rem;
         outline: none;
         border: none;
         border-radius: 1rem;
+    }
+    .form-input:focus{
+        outline:3px solid var(--Cyan);
     }
     .btn-shorten{
         cursor: pointer;
@@ -187,7 +203,7 @@ a{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 5rem;
+        gap: 3.5rem;
     }
     .feature-card{
         padding: 1rem 1.3rem;
@@ -234,13 +250,151 @@ a{
     }
     .heading-boost{
        color: var(--white); 
+       font-size: 3rem;
     }
+    /* footer section */
+    .footer{
+        padding: 5rem 0;
+        background-color: var(--VeryDarkBlue)
+    }
+ 
+    .footer-flex{
+        display: flex;
+        justify-content: center;
+        gap: 8rem;
+    }
+    .footer-flex > div> ul > li:first-child {
+        margin-bottom: 10px;
+        color: white;
+        font-weight: 700;
+    }
+    .list-1,
+    .list-2,
+    .list-3{
+        color: var(--white); 
+    }
+    
+    .social-link {
+        display: flex;
+        justify-content: space-between;
+        width: 200px;
+        margin: 10px auto;
+    }
+    
+    
 /* Responsiveness */
 @media (max-width:600px){
-    .nav-link{
-        display: none;
+    body{
+        overflow-x: hidden;
     }
+    .header-flex{
+        gap:60%;
+    }
+   
     .mobile-menu{
         display: block;
+        float: right;
+    }
+    .nav-list{
+        display: flex;
+        flex-direction: column;
+        gap:2rem;
+    }
+    .nav-btn a{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items:left;
+    }
+    .nav-bar{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        top: 90px;
+        width: 100%;
+        height: 30vh;
+        right: 10px;
+        left: 10px;
+        background-color: var(--VeryDarkBlue);
+        transform: translate(100%);
+
+
+    }
+    .nav-active{
+        transform: translate(0%);
+        width: 70%;
+        margin-left: 40px;
+        align-items: center;
+        transition: transform 0.5s ease-out;
+    }
+    .hero-section{
+        display: flex;
+        flex-direction: column-reverse;
+        justify-content:center;
+        margin-top: 5%;
+        padding-left: 5%;
+       
+    }
+    .heading-text{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        
+    }
+    .heading-text h1{
+        font-size: 2rem;
+    }
+    .header-text{
+        text-align: center;
+        width: 20rem;
+    }
+    .shorten{
+        display:flex;
+        justify-content: center;
+        margin-right: 80px;
+    }
+    
+    .shorten-content{
+        background-color: var(--DarkViolet);
+        width: 90%;
+        border-radius: 1rem; 
+    }
+  
+    form{
+       display: flex;
+       flex-direction:column;
+        gap: 20px;
+    }
+    input[type=text]{
+        
+        width: 100%;
+        padding: 1rem 2.5rem;
+        outline: none;
+        border: none;
+        border-radius: 1rem;
+    }
+    .feature-heading{
+        font-size:1.5rem;
+        font-weight: 700;
+    }
+    .feature-textbox{
+        text-align: center;
+        padding: 4rem 20vw;
+    }
+    .heading-boost{
+        color: var(--white); 
+        font-size: 2rem;
+     }
+    
+     .footer-flex{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: left;
+       gap: 2rem;
     }
 }
